# Resume-tailor-agent

./: .gitignore  README.md  main.py  pyproject.toml
Backend/: main.py
MCP/: main.py
extension/: manifest.json  popup.css  popup.html  popup.js
workflow/: main.py
