[project]
name = "tailor-resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "fastmcp>=3.2.4",
    "jupyter>=1.1.1",
    "langchain>=1.2.18",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=4.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "latex>=0.7.0",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.7.0",
]
